<resources>
    <string name="app_name">FoodTime</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_sign_up">Don\'t have an account? Sign Up</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="have_account_log_in">Have an account? Log In</string>
    <string name="placeholder1">Placeholder1</string>
    <string name="placeholder2">Placeholder2</string>
    <string name="button">Button</string>
    <string name="button3">Button</string>
    <string name="textview3">TextView</string>

    <!--  Welcome Screen -->
    <string name="welcome">Welcome</string>
    <string name="to">To</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="get_your_food">Get your food</string>
    <string name="on_time">on time</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pascatarian">Pascatarian</string>
    <string name="flexitarian">Flexitarian</string>
    <string name="others">Others</string>
    <string name="meat">Meat</string>
    <string name="poultry">Poultry</string>
    <string name="seafood">Seafood</string>
    <string name="eggs">Eggs</string>
    <string name="grains">Grains</string>
    <string name="meat_ingredients">Meat Ingredients</string>
    <string name="dairy_products">Dairy Products</string>
    <string name="onion">Onion</string>
    <string name="garlic">Garlic</string>
    <string name="peanuts">Peanuts</string>
    <string name="tree_nuts">Tree Nuts</string>
    <string name="fish">Fish</string>
    <string name="milk">Milk</string>
    <string name="shellfish">Shellfish</string>
    <string name="wheat">Wheat</string>
    <string name="soy">Soy</string>
    <string name="sesame">Sesame</string>

    <!-- Home Fragment -->
    <string name="sort_suggestions_by">Sort suggestions by:</string>
    <string name="delivery">Delivery</string>
    <string name="pick_up">Pick Up</string>
    <string name="fast_food">Fast Food</string>
    <string name="restaurant">Restaurant</string>
    <string name="suggestions">Suggestions</string>
    <string name="panda_express">Panda Express</string>
    <string name="arbor">Arbor</string>
    <string name="subway">Subway</string>
    <string name="fruedian">Fruedian</string>
    <string name="panda">Panda</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
    <string name="scrollbutton">Button</string>
    <string name="button45">Button</string>
    <string name="pandaaa">pandaaa</string>
    <string name="sub" />
    <string name="burger" />
    <string name="mcdonalds" />
    <string name="burgerking" />
    <string name="Burgerking" />

    <!-- Profile Fragment -->
    <string name="profile_settings">Profile Settings</string>
    <string name="change_name">Change Name</string>
    <string name="change_address">Change Address</string>
    <string name="view_preferences">View Preferences</string>
    <string name="view_allergies">View Allergies</string>
    <string name="account_settings">Account Settings</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_allergies">AllergiesActivity</string>
    <string name="forgot_password_title" />
    <string name="email_hint" />
    <string name="reset_password" />
    <string name="reset" />
    <string name="profile_name">Profile Name</string>


    <string name="select_a_restaurant">Select a restaurant</string>

    <string name="just_return">Return</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="change_address_title">Change Address</string>
    <string name="address_hint">Enter your address here</string>
    <string name="city_hint">City</string>
    <string name="state_hint">Enter State</string>
    <string name="zip_hint">Zip Code</string>
    <string name="save_button">Save</string>

</resources>