<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="25dp"
        android:orientation="horizontal"
        android:background="@color/teal_200" >

        <ImageView
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:src="@drawable/fb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/profileNameChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="16dp"
                android:text="@string/profile_name"/>
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_settings"
        android:textSize="27sp"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/profileChangeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_name"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/profileChangeAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_address"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/profileViewPreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_preferences"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/profileViewAllergies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_allergies"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_settings"
        android:textSize="27sp"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/profileChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/profileForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/profileLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:textColor="@color/black" />

</LinearLayout>