<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="#00936060"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="96sp"
        tools:text="@string/app_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true" >

        <EditText
            android:id="@+id/firstNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:hint="@string/firstName"
            android:textSize="30sp"
            tools:ignore="TouchTargetSizeCheck"
            android:paddingHorizontal="60dp"/>

        <EditText
            android:id="@+id/lastNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:fontFamily="cursive"
            android:hint="@string/lastName"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/emailSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:fontFamily="cursive"
            android:hint="@string/email"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/passwordSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="cursive"
            android:hint="@string/password"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp" >

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/haveAccountLogInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account_log_in" />

    </LinearLayout>

    <!--
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/google"

        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="646dp" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/twitter"

        tools:layout_editor_absoluteX="324dp"
        tools:layout_editor_absoluteY="646dp" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/fb"

        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="646dp" />
    -->

</RelativeLayout>