<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/welcome"
        android:textColor="#000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="181dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/delivery" />

    <Button
        android:id="@+id/button3"
        android:layout_width="177dp"
        android:layout_height="140dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="100dp"
        android:text="@string/pick_up" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="300dp"
        android:fontFamily="serif"
        android:text="@string/suggestions"
        android:textColor="#000000"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="417dp"
        android:layout_height="584dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-60dp"
                android:src="@drawable/panda_express_gluten_free_menu" />

            <EditText
                android:id="@+id/paanndaa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-370dp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/pandaaa"
                android:textColor="#100F0F"
                android:textColorHint="#131313" />

            <EditText
                android:id="@+id/subway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="250dp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/subway"
                android:textColor="#100F0F"
                android:textColorHighlight="@color/black"
                android:textColorHint="#131313"
                android:textColorLink="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="246dp"
                android:layout_height="169dp"
                android:src="@drawable/subway_logo_2002"
                android:contentDescription="TODO" />

            <EditText
                android:id="@+id/arbor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-0dp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/arbor"
                android:textColor="#100F0F"
                android:textColorHint="#131313"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="362dp"
                android:layout_height="326dp"
                android:src="@drawable/arborgrill_008_jpg" />

            <EditText
                android:id="@+id/fruedian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-0dp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/fruedian"
                android:textColor="#100F0F"
                android:textColorHint="#131313"
                tools:ignore="DuplicateIds,SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/freud_logo" />

            <EditText
                android:id="@+id/mcdonalds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-0dp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/mcdonalds"
                android:textColor="#100F0F"
                android:textColorHint="#131313"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/burger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/burger"
                android:textColor="#100F0F"
                android:textColorHint="#131313"
                tools:ignore="InvalidId,SpeakableTextPresentCheck" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>