<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:titleTextColor="@color/black"
        android:elevation="4dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_address_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTextView"
                android:layout_marginTop="16dp"
                android:hint="@string/address_hint"
                android:inputType="textPostalAddress"
                android:maxLines="2" />

            <EditText
                android:id="@+id/cityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_edit_text"
                android:layout_marginTop="16dp"
                android:hint="@string/city_hint"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/stateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cityEditText"
                android:layout_marginTop="16dp"
                android:hint="@string/state_hint"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/zipEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stateEditText"
                android:layout_marginTop="16dp"
                android:hint="@string/zip_hint"
                android:inputType="number"
                android:maxLines="1" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/zipEditText"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/save_button"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetTop="350dp"
                android:insetBottom="50dp"
                android:padding="16dp"
                android:text="Back"
                android:textColor="@color/white"
                app:elevation="0dp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
