<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LogInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="#00936060"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="96sp"
        tools:text="@string/app_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true" >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:background="@color/white"
            android:fontFamily="cursive"
            android:hint="@string/username"
            android:paddingHorizontal="60dp"
            android:textSize="30sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="cursive"
            android:hint="@string/password"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahianita"
            android:text="@string/forgot_password"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp" >

        <Button
            android:id="@+id/logInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/newUserSignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_sign_up" />

    </LinearLayout>

    <!--
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/google"

        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="646dp" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/twitter"

        tools:layout_editor_absoluteX="324dp"
        tools:layout_editor_absoluteY="646dp" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/fb"

        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="646dp" />
    -->

</RelativeLayout>